# rustdoc-markdown

./: .gitignore  Cargo.toml  README.md  ai.yaml  update-docs.sh
.ai/: project-instructions.md
crates/rustdoc-markdown/: Cargo.toml  README.md
crates/rustdoc-markdown/src/: cratesio.rs  graph.rs  lib.rs  main.rs
src/: cratesio.rs  graph.rs  lib.rs  main.rs
